<resources>
    <string name="app_name">My Submission 2</string>
    <string name="user_github">Username</string>
    <string name="name_github">Name</string>
    <string name="detail_user">Detail User</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="search_hint">Input User Name</string>
    <string name="tab_text_1">FOLLOWER</string>
    <string name="tab_text_2">FOLLOWING</string>
    <string name="app_description">This application has functions to perform a User Github search and displays the details.\n Search for Github users using the Search button above.</string>
    <string name="change_language_settings">Change Language Settings</string>
</resources>


